# capstone

./: README.md
data/scripts/: tos_scraper.py
summarization_backend/summarization_app/: Dockerfile  pyproject.toml
summarization_backend/summarization_app/src/: main.py  parallel_summarization_pipeline.py
summarization_backend_v2/pytorch_backend/: Dockerfile  pyproject.toml
summarization_backend_v2/pytorch_backend/src/: main.py  summary_pipeline.py
